<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:fitsSystemWindows="true"
        android:background="@color/main_bottom_navi_bg"
        app:layout_constraintTop_toTopOf="parent">
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        app:layout_constraintBottom_toTopOf="@id/main_bottom_radio_group">
    </FrameLayout>

    <RadioGroup
        android:id="@+id/main_bottom_radio_group"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/main_bottom_navi_bg"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <com.am.example.amtest.widget.MyRadioButton
            android:id="@+id/main_radio_bn_jindiao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:button="@null"
            android:text="@string/main_jindiao"
            android:gravity="center"
            android:textColor="@color/main_bottom_navi_icon_unselected"
            android:background="@android:color/transparent"
            app:drawableTop="@drawable/jindiao_drawable"/>

        <com.am.example.amtest.widget.MyRadioButton
            android:id="@+id/main_radio_bn_genzong"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:button="@null"
            android:text="@string/main_genzong"
            android:gravity="center"
            android:textColor="@color/main_bottom_navi_icon_unselected"
            android:background="@android:color/transparent"
            app:drawableTop="@drawable/genzong_drawable"/>

        <com.am.example.amtest.widget.MyRadioButton
            android:id="@+id/main_radio_bn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:button="@null"
            android:gravity="center"
            app:drawable_left="0dp"
            app:drawable_bottom="55dp"
            app:drawable_right="50dp"
            app:drawable_top="5dp"
            android:background="@android:color/transparent"
            app:drawableTop="@drawable/bottom_navi_add"/>

        <com.am.example.amtest.widget.MyRadioButton
            android:id="@+id/main_radio_bn_luntan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:button="@null"
            android:text="@string/main_luntan"
            android:gravity="center"
            android:textColor="@color/main_bottom_navi_icon_unselected"
            android:background="@android:color/transparent"
            app:drawableTop="@drawable/luntan_drawable"/>

        <com.am.example.amtest.widget.MyRadioButton
            android:id="@+id/main_radio_bn_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:button="@null"
            android:text="@string/main_my"
            android:gravity="center"
            android:textColor="@color/main_bottom_navi_icon_unselected"
            android:background="@android:color/transparent"
            app:drawableTop="@drawable/my_drawable"/>

    </RadioGroup>

</android.support.constraint.ConstraintLayout>