<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/toolbar_luntan_left_image"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/common_search"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/toolbar_luntan_middle_radio_gp"/>

    <RadioGroup
        android:id="@+id/toolbar_luntan_middle_radio_gp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/toolbar_luntan_left_image"
        app:layout_constraintRight_toLeftOf="@id/toolbar_luntan_right_image">

        <RadioButton
            android:id="@+id/toolbar_luntan_middle_radio_dongtai"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="17sp"
            android:text="@string/luntan_tab_dongtai"
            android:button="@null"
            android:textColor="@color/luntan_content_dark_grey"
            android:background="@android:color/transparent"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/toolbar_luntan_middle_radio_heimingdan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="17sp"
            android:text="@string/luntan_tab_heimingdan"
            android:button="@null"
            android:textColor="@color/luntan_content_dark_grey"
            android:background="@android:color/transparent"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/toolbar_luntan_middle_radio_guanzhu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textSize="17sp"
            android:text="@string/luntan_tab_guanzhu"
            android:button="@null"
            android:textColor="@color/luntan_content_dark_grey"
            android:background="@android:color/transparent"
            android:gravity="center"/>

    </RadioGroup>

    <ImageView
        android:id="@+id/toolbar_luntan_right_image"
        android:layout_width="0dp"
        android:layout_height="14dp"
        android:scaleType="fitCenter"
        android:src="@drawable/luntan_yun"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/toolbar_luntan_middle_radio_gp"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>